# QuickScintilla

./: CMakeLists.txt  debug.bat
QuickScintillaDemoApp/: CMakeLists.txt
scintilla/lexilla/: CMakeLists.txt
scintilla/lexilla/lexlib/: LexAccessor.h  StyleContext.h  WordList.h
scintilla/lexilla/test/: TestLexers.vcxproj
scintilla/qt/ScintillaEdit/: CMakeLists.txt
scintilla/qt/ScintillaEditBase/: CMakeLists.txt  ScintillaEditBase.cpp  ScintillaEditBase.h  ZfxLexer.cpp  ZfxLexer.h
scintilla/src/: Editor.cxx  Editor.h  Platform.h
